--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello world with spring boot - test</title>
+    <title>Hello world with spring boot</title>
 </head>
 <body>
-<a href="/app/version" target="_blank">Version</a><br>
-<a href="/app/hostname" target="_blank">Hostname</a><br>
-<a href="/actuator/health " target="_blank">Healthy check</a><br>
-<a href="/app/unhealthy " target="_blank">set unhealthy</a><br>
+    <a href="/app/version" target="_blank">Version</a><br>
+    <a href="/app/hostname" target="_blank">Hostname</a><br>
+    <a href="/actuator/health " target="_blank">Healthy check</a><br>
+    <a href="/app/unhealthy " target="_blank">set unhealthy</a><br>
 </body>
 </html>
